feat: add new route create card and modularize routes in external file, documentation route
